# CLMesh2D

./: CMakeLists.txt  README.md
examples/: problem1_dirichletBC.cc  test1.cc
include/: ADISolver.hpp  BoundaryCollector.hpp  BoundaryCondition.hpp  DirichletBC.hpp  DumbSolver.hpp  Mesh.hpp  NeumannBC.hpp  ScalarField.hpp  StencilField.hpp  VectorField.hpp  types.hpp
src/: ADISolver.cc  Mesh.cc  ScalarField.cc
temp/: test_boundariesOnStencilFields.cc
tests/: test_boundariesOnStencilFields.cc  test_mesh.cc  test_stencilFields.cc
